# sdk-nrf

./: CODEOWNERS  west.yml
applications/serial_lte_modem/src/: slm_at_socket.c
doc/nrf/libraries/modem/: nrf_modem_lib.rst
doc/nrf/libraries/networking/: downloader.rst
doc/nrf/releases/: release-notes-changelog.rst
doc/nrf/releases_and_maturity/: known_issues.rst
doc/nrf/releases_and_maturity/migration/: migration_guide_2.9.rst
include/modem/: trace_medium.h  trace_medium_rtt.h  trace_medium_uart.h
include/net/: downloader.h  downloader_transport.h  downloader_transport_coap.h  downloader_transport_http.h
lib/at_cmd_custom/: at_cmd_custom.ld
lib/at_host/: at_host.c
lib/at_monitor/: at_monitor.ld
lib/gcf_sms/: gcf_sms.c
lib/lte_link_control/: lte_lc.ld
lib/modem_slm/: modem_slm_monitor.ld
lib/nrf_modem_lib/: CMakeLists.txt  Kconfig  Kconfig.modemlib  TEST_CHANGE.txt  UPSTREAM_CHANGE.txt  cfun_hooks.ld  nrf9x_sockets.c  nrf_modem_lib.c  nrf_modem_lib.ld  nrf_modem_lib_trace.c  nrf_modem_lib_trace_sync.c  nrf_modem_os.c  nrf_modem_os_rpc.c  trace_medium.c  trace_medium.ld  trace_medium_rtt.c  trace_medium_uart.c
lib/nrf_modem_lib/trace_mediums/: CMakeLists.txt  Kconfig  trace_medium_rtt.c  trace_medium_uart.c  trace_medium_uart_sync.c
samples/nrf9160/custom_trace_medium/: CMakeLists.txt  Kconfig  README.rst  sample.yml
subsys/nrf_rpc/: nrf_rpc_ipc.c
subsys/sdfw_services/zcbor/: gen_cbor_parsers.cmake
tests/lib/modem_trace/trace_medium_rtt/: CMakeLists.txt
tests/lib/modem_trace/trace_medium_rtt/src/: trace_medium_rtt_test.c
(+35 files in other folders)
